hphp/hack/test/typecheck/generic_incompatible_implementation.php.exp
File "generic_incompatible_implementation.php", line 7, characters 19-19:
The method `f` has the wrong type (Typing[4341])
  File "generic_incompatible_implementation.php", line 7, characters 26-26:
  Expected `T`
  File "generic_incompatible_implementation.php", line 7, characters 26-26:
  This type argument to `C` must match exactly (it is invariant)
  File "generic_incompatible_implementation.php", line 11, characters 26-26:
  But got `D`
